# qwen3-8b-k-experiment

./: .gitignore  FINDINGS.md  GUIDE.md  pyproject.toml
configs/: cpt.yaml  data.yaml  train.yaml
docs/superpowers/plans/: 2026-06-26-pipeline-refactor.md
docs/superpowers/specs/: 2026-06-26-pipeline-refactor-design.md
kcpt/: __init__.py  config.py  data.py  metrics.py  model.py  paths.py
prompts/: imp.k
scripts/: build_replay.py  clean_corpus.py  env.sh  eval.sh  eval_suite.py  filter_legacy.py  make_splits.py  pack_dataset.py  prompt.py  prompt.sh  scrape_k.py  setup_stack.sh  train.sh  train_cpt.py
tests/: test_config.py  test_data.py  test_metrics.py
